--- a/src/components/tracker-app/tracker-app.scss
+++ b/src/components/tracker-app/tracker-app.scss
@@ -7,8 +7,9 @@ tracker-app {
     height: 100%;
     width: 100%;
 
-    #app-content {
+    main#app-content {
         position: relative;
+        display: flex;
         z-index: 9;
         width: 100%;
     }
